--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -29,7 +29,9 @@
     "@hookform/resolvers": "^3.3.2",
     "zod": "^3.22.4",
     "sonner": "^1.3.1",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.16",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
