--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
+    "build:prod": "node build.js",
+    "build:clean": "npm run clean && npm run build:prod",
     "start": "node dist/server.js",
+    "start:prod": "node build/dist/server.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist build",
     "lint": "eslint src --ext .ts",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:seed": "ts-node src/database/seed.ts",
     "generate-jwt": "ts-node src/scripts/generateJWT.ts",
