--- a/nginx-win5x.conf
+++ b/nginx-win5x.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 217.148.142.91;
+    server_name nymex.store;
 
     # User frontend - Port 8080
     location / {
